# Adaptive-AUTOSAR

ara/core/: CMakeLists.txt  ErrorTypes_Test_Main.cpp  Exception.h  core_core_error_domain_tests.cpp  core_error_code_test.cpp  core_error_domain.h  core_result_test.cpp  error_code.h  error_domain.h  result.h
